# Drone_Sim

./: Cargo.toml  README.md  orchestrator.py
docs/: architecture.md
src/: autonomy.rs  drone.rs  environment.rs  main.rs  network.rs  quadtree.rs
studies/: generate_chart.py  results.csv  run_study.rs
