[package]
name = "Drone_Sim"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "Drone_Sim"
path = "src/main.rs"

[[bin]]
name = "run_study"
path = "studies/run_study.rs"

[dependencies]
bincode = "1.3.3"
macroquad = "0.4.14"
pathfinding = "4.15.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0"
bytes = "1.5"
snow = "0.9"
sysinfo = "0.32"
